# agora-cl

./: CONTRIBUTING.md  README.md  TERMS_OF_SERVICE.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: docker.yml  docker_debug.yml  go.yml
agora/: BUILD.bazel  block_rewards.go  block_rewards_test.go
beacon-chain/blockchain/: head_sync_committee_info_test.go  merge_ascii_art.go
beacon-chain/core/altair/: BUILD.bazel  attestation.go  attestation_test.go  block.go  block_test.go  epoch_precompute.go  epoch_precompute_test.go  reward.go  reward_test.go  transition_test.go
beacon-chain/execution/: check_transition_config.go
beacon-chain/node/: node.go
beacon-chain/p2p/peers/: status.go
beacon-chain/powchain/: log_processing_test.go
beacon-chain/rpc/: service.go
beacon-chain/state/state-native/: state_trie.go
beacon-chain/state/stateutil/: eth1_root.go
beacon-chain/sync/initial-sync/: BUILD.bazel
cmd/beacon-chain/: BUILD.bazel
cmd/prysmctl/: BUILD.bazel
cmd/prysmctl/checkpointsync/: BUILD.bazel  download.go
cmd/prysmctl/validator/: BUILD.bazel  cmd.go
cmd/prysmctl/weaksubjectivity/: BUILD.bazel  checkpoint.go
cmd/validator/: BUILD.bazel  main.go
cmd/validator/accounts/: accounts.go
cmd/validator/flags/: flags.go
cmd/validator/slashing-protection/: slashing-protection.go
config/features/: config.go  flags.go
config/params/: config.go  minimal_config.go
runtime/tos/: tos.go
tools/bootnode/: BUILD.bazel
validator/accounts/: accounts_exit.go  accounts_exit_test.go  accounts_helper.go
validator/client/: service.go
(+5 files in other folders)
