load("@prysm//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["block_rewards.go"],
    importpath = "github.com/prysmaticlabs/prysm/agora",
    visibility = ["//visibility:public"],
    deps = [
    ],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = ["block_rewards_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//testing/require:go_default_library",
    ],
)
