load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "cmd.go",
        "download.go",
    ],
    importpath = "github.com/prysmaticlabs/prysm/v4/cmd/prysmctl/checkpointsync",
    visibility = ["//visibility:public"],
    deps = [
        "//cmd:go_default_library",
        "//api/client/beacon:go_default_library",
        "//config/params:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_urfave_cli_v2//:go_default_library",
        "//config/features:go_default_library",
        "//io/file:go_default_library",
        "//runtime/tos:go_default_library",
    ],
)
